<resources>
    <string name="app_name">Lingly</string>
    <string name="title_community">community</string>
    <string name="title_dialogs">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="loading">Загрузка&#8230;</string>
    <string name="button_ok">Ок</string>
    <string name="press_once_again_to_exit">Нажмите еще раз для выхода</string>
    <string name="btn_forgot_password">Восстановить пароль</string>
    <string name="btn_link_to_login">Уже зарегистрированы?</string>
    <string name="action_sign_in_short">Зарегистрироваться</string>
    <string name="hint_email">Email</string>
    <string name="login">Имя пользователя</string>
    <string name="lbl_forgot_password">Забыли пароль?</string>
    <string name="hint_password">Пароль</string>
    <string name="forgot_password_msg">Введите адрес электронной почты, на которую зарегистрирован ваш аккаунт</string>
    <string name="btn_reset_password">Сбросить пароль</string>
    <string name="btn_back"><![CDATA[<< Назад]]></string>
    <string name="minimum_password">Слишком короткий пароль, введите минимум 6 символов!</string>
    <string name="btn_link_to_register">Все еще не с нами? Присоединяйтесь!</string>
    <string name="auth_failed">Ошибка авторизации, неверный логин/пароль или вы еще не зарегистрированы</string>
    <string name="btn_login">Войти</string>
    <string name="btn_signup">Зарегистрироваться</string>
    <string name="txt_login">Вход</string>
    <string name="email_err">Некорректный email</string>
    <string name="email_signup_err">Email</string>
    <string name="language_level_select">Выберите уровень владения изучаемыми языками</string>
    <string name="pass_signup_err">Пароль</string>
    <string name="pass_reset_sucss">Мы отправили инструкции на вашу почту</string>
    <string name="pass_reset_fail">Ошибка смены пароля, проверьте email</string>
    <string name="pass_signin_err">Введите пароль</string>
    <string name="signup_sucss">Новый пользователь зарегистрирован!</string>
    <string name="signup_err">Ошибка регистрации</string>
    <string name="no_interent_connection_err">Проверьте интернет соединение</string>
    <string name="login_empty">Придумайте логин!</string>
    <string name="empty_field_err">Пожалуйста, запомлните это поле!</string>
    <string name="first_name">Ваше имя</string>
    <string name="second_name">Ваша фамилия</string>
    <string name="about">О себе</string>
    <string name="about_txt">Расскажите о себе</string>
    <string name="date_of_birth">Ваш день рождения: </string>
    <string name="next_step">Далее</string>
    <string name="txt_signup">Регистрация</string>
    <string name="native_language">Родной язык</string>
    <string name="non_native_language">Язык, который Вы бы хотели изучать</string>
    <string name="language_err">Ошибка установки языка, попробуйте позже</string>
    <string name="not_auth_err">Вы не авторизованы!</string>
    <string name="err">Ошибка загрузки данных</string>
    <string name="edit_btn">редактировать</string>
    <string name="avatar_load">Загружаем аватарку</string>
    <string name="select_language_level">Выберите Ваш уровень владения языками</string>
    <string name="large_text"> "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"</string>
    <string name="online">Online</string>
    <string name="not_online">Not online</string>
    <string-array name="languages">
        Русский
        Английский
        Немецкий
        Французский
        Испанский
        Португальский
        Арабский
        Турецкий
        Итальянский
        Хинди
    </string-array>

</resources>
